--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div>
   <app-header></app-header>
-  This is the main page
+  <opportunity-canvas [canvas]="sampleCanvas"></opportunity-canvas>
 </div>
