--- a/src/app/component/canvas/canvas.component.html
+++ b/src/app/component/canvas/canvas.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="topLeftMid">
       <div class="problems">
-        <canvas-box title="Problems" subtitle="What problems do prospective users and customers have today that your solution addresses?"></canvas-box>
+        <canvas-box title="Problems" subtitle="What problems do prospective users and customers have today that your solution addresses?" [content]="canvas.problems"></canvas-box>
       </div>
       <div class="solutionsToday">
         <canvas-box title="Solutions Today"></canvas-box>
