--- a/src/app/component/canvas/canvas.component.html
+++ b/src/app/component/canvas/canvas.component.html
@@ -2,45 +2,48 @@
   <div class="containerTop">
     <div class="topLeft">
       <div class="users">
-        <canvas-box title="Users & Customers"></canvas-box>
+        <canvas-box title="Users & Customers" [content]="canvas.users"></canvas-box>
       </div>
     </div>
     <div class="topLeftMid">
       <div class="problems">
-        <canvas-box title="Problems" subtitle="What problems do prospective users and customers have today that your solution addresses?" [content]="canvas.problems"></canvas-box>
+        <canvas-box 
+          title="Problems" 
+          subtitle="What problems do prospective users and customers have today that your solution addresses?" 
+          [content]="canvas.problems"></canvas-box>
       </div>
       <div class="solutionsToday">
-        <canvas-box title="Solutions Today"></canvas-box>
+        <canvas-box title="Solutions Today" [content]="canvas.solutionsToday"></canvas-box>
       </div>
     </div>
     <div class="topMid">
       <div class="solutionIdeas">
-        <canvas-box title="Solution Ideas"></canvas-box>
+        <canvas-box title="Solution Ideas" [content]="canvas.solutionIdeas"></canvas-box>
       </div>
     </div>
     <div class="topRightMid">
       <div class="userValue">
-        <canvas-box title="User Value"></canvas-box>
+        <canvas-box title="User Value" [content]="canvas.userValue"></canvas-box>
       </div>
       <div class="adoption">
-        <canvas-box title="Adoption Strategy"></canvas-box>
+        <canvas-box title="Adoption Strategy" [content]="canvas.adoption"></canvas-box>
       </div>
     </div>
     <div class="topRight">
       <div class="userMetrics">
-        <canvas-box title="User Metrics"></canvas-box>
+        <canvas-box title="User Metrics" [content]="canvas.userMetrics"></canvas-box>
       </div>
     </div>
   </div>
   <div class="containerBottom">
     <div class="businessProblems">
-      <canvas-box title="Business Problems"></canvas-box>
+      <canvas-box title="Business Problems" [content]="canvas.businessProblems"></canvas-box>
     </div>
     <div class="budget">
-      <canvas-box title="Budget"></canvas-box>
+      <canvas-box title="Budget" [content]="canvas.budget"></canvas-box>
     </div>
     <div class="businessMetrics">
-      <canvas-box title="Business Metrics"></canvas-box>
+      <canvas-box title="Business Metrics" [content]="canvas.businessMetrics"></canvas-box>
     </div>
   </div>
 </div>
